[package]
edition = "2021"
name = "leptos-cloudflare-example"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["ssr"]

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["hydrate"]

[profile.release]
opt-level = 's'
lto = true
strip = true

[dependencies]
leptos = { version = "0.6", default-features = false, features = ["nightly"] }
leptos_meta = { version = "0.6", default-features = false, features = [
  "nightly",
] }
leptos_router = { version = "0.6", default-features = false, features = [
  "nightly",
] }
axum = { version = "0.7", default-features = false, optional = true, features = [
  "macros",
] }
leptos_axum = { version = "0.6", default-features = false, optional = true }
worker = { version = "0.0.24", features = ["http"] }
worker-macros = { version = "0.0.16", features = ["http"] }
async-trait = "0.1.79"
wasm-bindgen = "0.2"
tower = "0.4.13"
js-sys = "0.3.69"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
